# Kindle-Clippings-CLI

./: .gitignore  .pre-commit-config.yaml  README.md  clippings_cli.spec  pyproject.toml
.github/workflows/: main.yml
clippings-cli/: pyproject.toml
clippings-cli/clippings_cli/: __main__.py  clippings_service.py  convert.py
clippings-cli/clippings_cli/clippings_service/: service.py  validators.py
clippings-cli/clippings_cli/clippings_service/format_handlers/: excel_handlers.py
clippings-cli/clippings_cli/format_handlers/: excel_handlers.py  json_handlers.py
clippings_cli/: __main__.py  entrypoint.py
clippings_cli/clippings_service/: parsers.py  service.py
clippings_cli/clippings_service/format_handlers/: excel_handlers.py
clippings_cli/commands/: convert.py
tests/: conftest.py  test_entrypoint.py  test_main.py
tests/clippings_service/: test_parsers.py  test_service.py  test_validators.py
tests/clippings_service/format_handlers/: test_excel_handlers.py  test_json_handlers.py
tests/commands/: test_convert.py
tests/test_clippings_service/: test_parsers.py  test_service.py  test_validators.py
tests/test_clippings_service/test_format_handlers/: test_excel_handlers.py  test_json_handlers.py
tests/test_commands/: test_convert.py
