[tool.poetry]
name = "clippings-cli"
version = "1.0.0"
description = "A CLI tool for managing Kindle clippings"
authors = ["Dawid Mateusiak <mateusiakdawid@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MateDawid/Kindle-Clippings-CLI"
repository = "https://github.com/MateDawid/Kindle-Clippings-CLI"
packages = [
    { include = "clippings_cli" },
]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clippings_cli = "clippings_cli.__main__:cli"